name:                url-shortener
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/klotz-dabril/url-shortener#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          klotz.dabril@gmail.com
copyright:           2021 Otto Raphael Klotz D'Abril
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable url-shortener
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       wai,
                       wai-extra,
                       warp,
                       http-types,
                       blaze-builder,
                       bytestring
